<resources>
    <string name="app_name">KlinicalSys</string>
    <string name="name">Full Name</string>
    <string name="age">Age</string>
    <string name="genre">Genre</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="you_cannot_undo_it">You will not be able to undo it</string>
    <string name="you_re_sure">You\'re sure?</string>
    <string name="specialties">Specialties</string>
    <string name="doctors">Doctors</string>
    <string name="appointments">Appointments</string>
    <string name="patients">Patients</string>
    <string name="specialty_name">Specialty Name</string>
    <string name="id">ID</string>
    <string name="specialty">Specialty</string>
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="filter_appointments">Filter Appointments</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="filter">Filter</string>
    <string name="gender">Gender</string>
    <string name="patient_gender">Patient Gender</string>
</resources>