<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/btnPatients"
        android:icon="@drawable/ic_patients"
        android:title="@string/patients"
        app:showAsAction="always" />

    <item
        android:id="@+id/btnAppointments"
        android:icon="@drawable/ic_paper"
        android:title="@string/appointments"
        app:showAsAction="always" />

    <item
        android:id="@+id/btnDoctors"
        android:icon="@drawable/ic_doctor"
        android:title="@string/doctors"
        app:showAsAction="always" />

    <item
        android:id="@+id/btnSpecialty"
        android:icon="@drawable/ic_specialty"
        android:title="@string/specialties"
        app:showAsAction="always" />
</menu>